fix(NyxTabs): restore overflow scrolling

--- a/src/components/NyxTabs/NyxTabs.scss
+++ b/src/components/NyxTabs/NyxTabs.scss
@@ -5,6 +5,8 @@
   --nyx-pad-tabs: var(--nyx-pad-md);
   --nyx-tab-index: 0;
 
+  display: flex;
+  flex-direction: column;
   border: 1px solid var(--nyx-rgb-tabs-bg);
   overflow: hidden;
 
@@ -23,14 +25,19 @@
 
   &__container {
     display: flex;
+    flex: 1 1 auto;
     flex-wrap: nowrap;
+    min-height: 0;
+    overflow: hidden;
     transform: translateX(calc(0px - (var(--nyx-tab-index)) * 100%));
   }
 
   &__tab {
     min-width: 100%;
+    min-height: 0;
     padding: 1rem;
     opacity: 0;
+    overflow-y: auto;
     transition: opacity calc(2 * var(--nyx-speed-slowest));
 
     &.active {
